removed timing from Run, edited makefile and travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,10 @@ script:
     - ls -al
     - make html
     - ls -al
+    - make clean
     - make test
+    - make clean
+    - make test CXX=clang++
     - ls -al
     - make check
 
